Поправил описание сайта

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Perfception &bull; Быстрее лучше, чем медленнее, %username%
+title: Perfception — Быстрее лучше, чем медленнее, %username%
 email: hello@perfception.com
 description: Коллективный блог о клиентской оптимизации.
 baseurl: ""
